<?xml version="1.0" encoding="UTF-8"?>
<resources>
  <string-array name="currency_code" translatable="false">
    <item>RUB</item>
    <item>USD</item>
    <item>EUR</item>
    <item>UAH</item>
  </string-array>
  <string-array name="languages_code" translatable="false">
    <item>ru</item>
    <item>en</item>
    <item>fr</item>
    <item>de</item>
    <item>ar</item>
    <item>az</item>
    <item>bn</item>
    <item>ce</item>
    <item>fi</item>
    <item>hi</item>
    <item>hy</item>
    <item>jw</item>
    <item>ja</item>
    <item>kk</item>
    <item>ne</item>
    <item>nl</item>
    <item>pl</item>
    <item>pt</item>
    <item>th</item>
    <item>uk</item>
    <item>uz</item>
    <item>zh</item>
    <item>id</item>
    <item>is</item>
    <item>it</item>
    <item>jw</item>
    <item>ja</item>
    <item>kk</item>
    <item>ko</item>
    <item>lt</item>
    <item>lv</item>
    <item>mk</item>
    <item>ms</item>
    <item>mt</item>
    <item>ne</item>
    <item>nl</item>
    <item>no</item>
    <item>pl</item>
    <item>pt</item>
    <item>ro</item>
    <item>ru</item>
    <item>sk</item>
    <item>sq</item>
    <item>sr</item>
    <item>sv</item>
    <item>th</item>
    <item>tt</item>
    <item>uk</item>
    <item>uz</item>
    <item>vi</item>
    <item>zh</item>
  </string-array>
  <string-array name="penny_type">
    <item>Text</item>
    <item>Number</item>
  </string-array>
  <string-array name="penny_type_code" translatable="false">
    <item>penny_type_text</item>
    <item>penny_type_number</item>
  </string-array>
  <string name="app_name">VAT</string>
  <string name="amount">Amount</string>
  <string name="without_vat">Excluding VAT</string>
  <string name="include_vat">Including VAT</string>
  <string name="vat">VAT</string>
  <string name="gross_amount">Gross Amount</string>
  <string name="net_amount">Net Amount</string>
  <string name="copied">Copied!</string>
  <string name="percent" translatable="false">%</string>
  <string name="light">Light</string>
  <string name="dark">Dark</string>
  <string name="battery_saver">Set by Battery Saver</string>
  <string name="system_default">System default</string>
  <string name="choose_theme">Theme</string>
  <string name="cancel">Cancel</string>
  <string name="improve_translation">Improve translation</string>
  <string name="github" translatable="false">GitHub</string>
  <string name="settings">Settings</string>
  <string name="other">Other</string>
  <string name="save_value">Save value</string>
  <string name="vat_rate">VAT rate</string>
  <string name="rate">Rate</string>
  <string name="language">Language</string>
  <string name="rate_string">%1$s\n%3$s rate %2$s</string>
  <string name="general_settings">General</string>
  <string name="amount_to_words">Amount to words</string>
  <string name="currency">Currency</string>
  <string name="penny_type">Penny type</string>
  <string name="save_amount_on_exit">Save amount on exit</string>
    <string name="do_not_save_amount_on_exit">Do not save amount on exit</string>
    <string name="arbitrary_rate_set">Arbitrary VAT rate set</string>
    <string name="set_vat_rate">Need to set VAT rate</string>
    <string name="set">Set</string>
    <string name="type_standard">standard</string>
    <string name="type_higher">higher</string>
    <string name="type_reduced">reduced</string>
    <string name="compact_view">Compact view</string>
    <string name="horizontal_layout">Horizontal layout</string>
    <string name="vertical_layout">Vertical layout</string>
    <string name="back">Back</string>
    <string name="review">Rate app and review</string>
    <string name="ad">Ad</string>
    <string name="adWatch">watch ad</string>
    <string name="adMessage">Hi!\nWe really didn\'t want to add ads, but we need financial support. So you can watch ads or opt out.\nThanks for the attention!</string>
</resources>
