<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="Основные">

        <ListPreference
            app:icon="@drawable/brightness"
            app:key="theme"
            android:summary="%s"
            app:title="@string/choose_theme" />

        <SwitchPreference
            android:defaultValue="true"
            app:icon="@drawable/save"
            app:key="save_value"
            app:title="@string/save_value" />

        <ListPreference
            app:icon="@drawable/language"
            app:key="language"
            app:title="@string/language"
            android:summary="%s"/>

        <ListPreference
            app:icon="@drawable/percent"
            app:key="rate"
            app:title="@string/rate"
            android:summary="%s"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="Amount to words">

        <ListPreference
            android:icon="@drawable/text_fields"
            android:key="currency"
            android:title="Currency"
            android:summary="%s"/>

        <ListPreference
            android:defaultValue="true"
            android:entries="@array/pennies_type"
            android:entryValues="@array/pennies_type"
            android:icon="@drawable/text_fields"
            android:key="penny"
            android:summary="%s"
            android:title="Pennies" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/other">

        <Preference
            app:icon="@drawable/translate"
            app:key="translate"
            app:title="@string/improve_translation" />

        <Preference
            app:icon="@drawable/github"
            app:key="github"
            app:title="@string/github" />

    </PreferenceCategory>
</PreferenceScreen>
