<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vat_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VatFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/vatLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/addVatTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:text="@string/gross_amount"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/vatAddTextLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="8dp"
                android:clickable="true"
                android:hint="@string/vat"
                app:endIconDrawable="@drawable/text_fields"
                app:endIconMode="clear_text"
                tools:ignore="KeyboardInaccessibleWidget">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vatAddEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:cursorVisible="false"
                    android:focusableInTouchMode="false"
                    android:singleLine="true"
                    android:textAlignment="textEnd" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/amountIncludeTextLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:clickable="true"
                android:hint="@string/include_vat"
                app:endIconDrawable="@drawable/text_fields"
                app:endIconMode="clear_text"
                tools:ignore="KeyboardInaccessibleWidget">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/amountIncludeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:cursorVisible="false"
                    android:focusableInTouchMode="false"
                    android:singleLine="true"
                    android:textAlignment="textEnd" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/netAmountTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/net_amount"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                android:textSize="24sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/vatNetTextLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="8dp"
                android:clickable="true"
                android:hint="@string/vat"
                app:endIconDrawable="@drawable/text_fields"
                app:endIconMode="clear_text"
                tools:ignore="KeyboardInaccessibleWidget">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vatNetEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:cursorVisible="false"
                    android:focusableInTouchMode="false"
                    android:singleLine="true"
                    android:textAlignment="textEnd" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/amountNetTextLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:clickable="true"
                android:hint="@string/without_vat"
                app:endIconDrawable="@drawable/text_fields"
                app:endIconMode="clear_text"
                tools:ignore="KeyboardInaccessibleWidget">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/amountExcludeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:cursorVisible="false"
                    android:focusableInTouchMode="false"
                    android:singleLine="true"
                    android:textAlignment="textEnd" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <include
        layout="@layout/bottom_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
